gitops/components/envoy/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy-gateway
  addresses:
    - value: 130.246.81.219
  listeners:
  - name: http-argocd
    port: 80
    protocol: HTTP
    hostname: argocd.observability.isis.rl.ac.uk
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            kubernetes.io/metadata.name: argocd
  - name: https-argocd
    port: 443
    protocol: HTTPS
    hostname: argocd.observability.isis.rl.ac.uk
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            kubernetes.io/metadata.name: argocd
    tls:
      certificateRefs:
        - group: ""
          kind: Secret
          name: argo-observability-isis-rl-ac-uk
  - name: http-observability
    port: 80
    protocol: HTTP
    hostname: observability.isis.rl.ac.uk
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            kubernetes.io/metadata.name: grafana
  - name: https-observability
    port: 443
    protocol: HTTPS
    hostname: observability.isis.rl.ac.uk
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            kubernetes.io/metadata.name: grafana
    tls:
      certificateRefs:
        - group: ""
          kind: Secret
          name: observability-isis-rl-ac-uk
  - name: http-grafana
    port: 80
    protocol: HTTP
    hostname: grafana.observability.isis.rl.ac.uk
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            kubernetes.io/metadata.name: grafana
  - name: https-grafana
    port: 443
    protocol: HTTPS
    hostname: grafana.observability.isis.rl.ac.uk
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            kubernetes.io/metadata.name: grafana
    tls:
      certificateRefs:
        - group: ""
          kind: Secret
          name: grafana-observability-isis-rl-ac-uk
